# uberscrape

./: .env.example  .gitignore  DEPLOY.md  PROJECT-STATE.md  README.md  pyproject.toml  test_gemini.json  test_output.json  test_schema.json
uberscrape/: __init__.py  cli.py
uberscrape/core/: scraper.py
uberscrape/schemas/: product.json  rental-listing.json
uberscrape/utils/: __init__.py  export.py  schema.py  sitemap.py
web/: package-lock.json
web/app/: layout.tsx  page.tsx
web/app/api/scrape/: route.ts
